# LM-MHD-Toolbox

./: .gitignore  README.md  pyproject.toml
examples/: Sloan_me_vs_yslan.py  ex_1_laminar_ducts.py  ex_1a_laminar_ducts_Shercliff.py  ex_1b_laminar_ducts_Hunt.py  ex_2a_unstructured_points_serial.py  ex_2b_unstructured_points_parallel.py  ex_3a_laminar_ducts_Sloan.py
src/mhdtools/: __init__.py  analytic.py  analytic_new.py  file_io.py  paraview_interface.py  statistics.py  yslan.py
